@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1956 2003/12/29 13:02:28 lculik Exp $
+ * $Id: ChangeLog,v 1.1957 2003/12/29 18:29:45 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-29  11:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbapi.h
+  * source/rtl/seconds.c
+    * Added HB_EXPORT to hb_secondsCPU()
+
+  * source/rtl/gtwin/gtwin.c
+    * MSVC compilation
+
 2003-12-29 16:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
   * utils/hbdoc/genng.prg
     utils/hbdoc/genrtf.prg
